[tool.poetry]
name = "xkcd-publisher"
version = "0.1.0"
description = ""
authors = ["abarzenok <69277070+abarzenok@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
