[tool.poetry]
name = "xkcd-publisher"
version = "0.1.0"
description = "Posts random xkcd comic to a VK group"
authors = ["abarzenok <69277070+abarzenok@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
